Fixed margins and spacing

--- a/app/assets/stylesheets/components/_card-recipe-index.scss
+++ b/app/assets/stylesheets/components/_card-recipe-index.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr;
   flex-grow: 1;
   grid-gap: 8px;
-  margin: 8px;
+  margin: 16px;
   margin-top: 0;
 }
 
@@ -18,6 +18,7 @@
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 24px;
   font-family: $headers-font;
+  margin-bottom: 16px;
 }
 
 .recipe-cards-photo{
